# cinarium

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.cargo/: config.toml
assets/lottie/: home_empty.json  loading2.json  loading3.json  menu-item-debug.json  menu-item-hfs.json  menu-item-home.json  menu-item-pool.json  menu-item-retrieve.json  menu-item-settings.json  system-solid-26-play.json
bridge/: README.md  pubspec.yaml
bridge/lib/call_rust/: app.dart  file.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  native.dart  task.dart
bridge/lib/call_rust/model/: source.dart  video.dart
bridge/lib/call_rust/native/: db_api.dart  home_api.dart  system_api.dart  task_api.dart
bridge/lib/call_rust/task/: crawler.dart
bridge/linux/: CMakeLists.txt  bridge_plugin.cc  bridge_plugin_private.h
bridge/linux/include/bridge/: bridge_plugin.h
bridge/linux/test/: bridge_plugin_test.cc
bridge/macos/: bridge.podspec
bridge/macos/Classes/: BridgePlugin.swift
bridge/windows/: CMakeLists.txt  bridge_plugin.cpp  bridge_plugin.h  bridge_plugin_c_api.cpp
bridge/windows/include/bridge/: bridge_plugin_c_api.h
bridge/windows/test/: bridge_plugin_test.cpp
integration_test/: simple_test.dart
lib/: main.dart
lib/components/: color_scheme_desktop_menu_widget_builder.dart  scroll_animator.dart  settings_item.dart
lib/models/: color.g.dart  text_direction.g.dart  theme.dart  theme.g.dart  theme_mode.g.dart  window_effect.g.dart
lib/routes/: app_pages.dart  app_routes.dart
lib/screens/debug/controllers/: debug_controller.dart
lib/screens/debug/page/: debug_page.dart
lib/screens/hfs/components/: hfs_button.dart  http_button.dart  serve_ip_bar.dart
lib/screens/hfs/controllers/: hfs_controller.dart  http_controller.dart
lib/screens/hfs/page/: hfs_page.dart
lib/screens/home/components/: RangeSliderExample.dart  attr_filter_panel.dart  attr_filter_panel_menu.dart  bilateral_range_slider.dart  duration_filter_edits.dart  duration_filter_panel.dart  duration_filter_panel_menu.dart  mov_card.dart  size_filter_edits.dart  size_filter_panel.dart  size_filter_panel_menu.dart  slide_fade_transition.dart  text_filter_edit.dart  video_card.dart
lib/src/rust/: frb_generated.dart
lib/util/: desktop_util.dart  hive_util.dart  path_util.dart  port_util.dart  registry_util.dart  search_url_util.dart  theme_extension_util.dart  tray_util.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
migrations/: 20240410075029_cinarium.down.sql
native/: Cargo.toml
native/cinarium-crawler/: script.pest
native/cinarium-crawler-derive/: Cargo.toml
native/cinarium-crawler/src/: script.rs
native/cinarium-runner/src/: lib.rs
native/src/: notify.rs
native/src/api/: error.rs  mod.rs
native/src/model/: source.rs
native/src/naitive/: db_api.rs  system_api.rs
native/src/task/: mod.rs
native/templates/: index.html
rust/: Cargo.toml  build.rs
rust/cinarium-crawler/: Cargo.toml
rust/cinarium-runner/: Cargo.toml
rust/cinarium-runner/src/: lib.rs  task.rs
rust/ffmpeg/: build.sh
rust/migrations/: 20240410075029_cinarium.down.sql  20240410075029_cinarium.up.sql
rust/src/: app.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  log.rs  main.rs  notify.rs
rust/src/api/: error.rs  mod.rs  res.rs
rust/src/api/routers/: mod.rs  sys.rs
rust/src/file/: mod.rs  notify.rs
rust/src/model/: mod.rs  source.rs  task.rs  video.rs
rust/src/naitive/: pool_api.rs
rust/src/native/: db_api.rs  home_api.rs  mod.rs  system_api.rs  task_api.rs
rust/src/task/: crawler.rs  mod.rs  test.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/: pubspec.yaml  run_build_tool.cmd
rust_builder/cargokit/cmake/: cargokit.cmake
rust_builder/ios/: cinarium_core.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: cinarium_core.podspec
rust_builder/windows/: CMakeLists.txt
src/: app.rs  main.rs
src/model/: mod.rs  video.rs
src/naitive/: mod.rs
super_context_menu/: pubspec.yaml
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+61 files in other folders)
