[workspace]
members = [
  ".",
  "cinarium-runner",
  "cinarium-crawler",
  "cinarium-crawler-derive",
]

[workspace.package]
authors = ["leri"]
description = ""
edition = "2021"
license = ""
publish = false
repository = ""

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = "s"
panic = "abort"

[workspace.dependencies]
lazy_static = "*"
regex = "*"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
serde = "1.0"
serde_derive = "*"
serde_json = "1.0"
tokio = { version = "1.37", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [] }
thiserror = "= 1.0.58"
rand = "0.8.4"
parking_lot = "0.12"
prost = "0.11"
prost-types = "0.11"
futures-util = "0.3.21"
dashmap = "5"
chrono = "= 0.4.38"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
anyhow = { version = "1.0" }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "chrono",
] }
quote = "1.0.35"
syn = "2.0.52"
cinarium-runner = { path = "cinarium-runner" }
cinarium-crawler = { path = "cinarium-crawler" }
cinarium-crawler-derive = { path = "cinarium-crawler-derive" }
toml_edit = { version = "0.19.14", features = ["serde"] }
dotenvy = "0.15.7"


[package]
edition = "2021"
name = "cinarium"
rust-version = "1.56"
version = "0.1.1"

[build-dependencies]
flutter_rust_bridge_codegen = "2.1"
prost-build = "0.12"
anyhow = { workspace = true }
winres = { git = "https://github.com/Nilstrieb/winres", branch = "linking-flags" }

[dependencies]
anyhow = { workspace = true }
askama = "0.11"
axum = "0.7.5"
axum-extra = "0.9.3"
chrono = { workspace = true }
dirs = "5.0"
image = { version = "0.25", features = ["webp"] }
linked-hash-map = { version = "*", features = ["serde_impl"] }
local_ipaddress = "0.1.3"
mime = "0.3.16"
parking_lot = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = { workspace = true }
cinarium-runner = { workspace = true }
cinarium-crawler = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
toml_edit = { workspace = true }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2.3"
uuid = { workspace = true }
flutter_rust_bridge = { version = "2.1", features = ["default", "chrono"] }
rfd = "0.11.4"
open = "5.0.0"
walkdir = "2"
opener = "0.6.1"
sqlx = { workspace = true }
cinarium-crawler-derive = { workspace = true }
structopt = "0.3"
dashmap = { workspace = true }
notify = { version = "6.1.1", default-features = false, features = [
  "macos_kqueue",
] }
file-id = "0.2.1"
prettytable-rs = "0.10.0"
rand = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }

[features]

[lib]
name = "cinarium_core"
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "cinarium"
path = "src/main.rs"
