[package]
name = "cinarium-crawler-derive"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
cinarium-crawler = { workspace = true }
proc-macro2 = "1.0"

[lib]
proc-macro = true
